-- VanHaskell.cabal

name:                VanHaskell
version:             0.1.0.0
synopsis:            Generate C from uber cool VH language
-- description:         
homepage:            https://github.com/bysy/VanHaskell
license:             BSD3
license-file:        LICENSE
author:              Benjamin Schulz
maintainer:          bysy@users.noreply.github.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.VanHaskell
  -- other-modules:       
  other-extensions:    BangPatterns, DeriveDataTypeable, FlexibleContexts, GADTs, GeneralizedNewtypeDeriving, ScopedTypeVariables, TypeFamilies
  build-depends:       base >= 4.8,
                       containers >= 0.5,
                       mtl >= 2.1.2,
                       syb >= 0.4.0,
                       transformers >= 0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
